Bug 950300 - Cancel APZC panning is the first touchmove is preventDefault'ed. r=kats